--- a/test-cases.yml
+++ b/test-cases.yml
@@ -340,7 +340,7 @@
     Должена отобразиться статистика по всем играм
 
 - summary: |
-    Проверка возможности пользователя просмотреть подбробную информацию по своим сыгранным играм
+    Проверка возможности пользователя просмотреть подробную информацию по своим сыгранным играм
   requirement: |
     При нажатии на кнопку "Show" должна отобразиться подробная информация о сыгранной игре
   prerequisites: |
