--- a/test-cases.yml
+++ b/test-cases.yml
@@ -526,8 +526,10 @@
     - Просматриваем историю всех сыгранных битв
     - Просматриваем свой профиль
     - Просматриваем настройки
-    - Создаем задачи
     - Просматриваем рейтинг других пользователей
+    - Просматриваем подробную информацию о задачах
+    - Создаем новую задачу
+    - Создаем пакеты задач
   expected-result: |
      Сайт игры должен корректно отображаться на всех выбранных тестовых устройствах
 
@@ -555,8 +557,10 @@
     - Просматриваем историю всех сыгранных битв
     - Просматриваем свой профиль
     - Просматриваем настройки
-    - Создаем задачи
     - Просматриваем рейтинг других пользователей
+    - Просматриваем подробную информацию о задачах
+    - Создаем новую задачу
+    - Создаем пакеты задач
   expected-result: |
      Сайт игры должен корректно работать во всех последних версиях браузеров
 
