--- a/issues.yml
+++ b/issues.yml
@@ -1,6 +1,6 @@
 ---
 issues:
-  - url:
-  - url:
-  - url:
-  - url:
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1999"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/2000"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/2001"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/2002"
