--- a/testing-report.yml
+++ b/testing-report.yml
@@ -17,7 +17,7 @@
 
 - summary: |
     Проверка регистрации пользователя через Discord
-  status: pass
+  status: fail
 
 - summary: |
     Проверка возможности пользователя сыграть простую битву без регистрации
