--- a/issues.yml
+++ b/issues.yml
@@ -4,3 +4,4 @@ issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2000"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2001"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2002"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1994"
