--- a/test-cases.yml
+++ b/test-cases.yml
@@ -4,10 +4,12 @@
   requirement: |
     При верном вводе никнейма, почты, пароля и подтверждения пароля пользователь должен зарегистрироваться
   prerequisites: |
-    Открыта страница регистрации https://codebattle.hexlet.io/users/new?next=/
+    Открыта главная страница игры https://codebattle.hexlet.io/ 
   test-data: |
     Никнейм = example, почта = example@mail.com, пароль = 123456
   steps:
+    - Переходим на страницу регистрации, нажав на кнопку "Sign in"
+    - Нажимаем на кнопку "Sign up"
     - Вводим никнейм
     - Вводим почту
     - Вводим пароль
@@ -15,7 +17,7 @@
     - Нажимаем на кнопку "Submit"
     - Переходим в почту и подтверждаем учетную запись
   expected-result: |
-    Пользователь должен зарегистрироваться
+    Должна произойти регистрация нового пользователя (открывается лобби, в углу пользователь видит свой ник)
     
 - summary: |
     Проверка входа пользователя с существующими логином и паролем
@@ -26,14 +28,15 @@
   test-data: |
     Логин = example@mail.com, пароль = 123456
   steps:
+    - Переходим на страницу регистрации, нажав на кнопку "Sign in"
     - Вводим логин
     - Вводим пароль
     - Нажимаем на кнопку "Submit"
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Должна произойти вход пользователя в аккаунт (открывается лобби, в углу пользователь видит свой ник)
 
 - summary: |
-    Проверка входа пользователя с несуществующими логином и паролем
+    Проверка невозможности входа пользователя с несуществующими логином и паролем
   requirement: |
      При неправильном логине или пароле пользователь должен получить сообщение об ошибке
   prerequisites: |
