--- a/testing-report.yml
+++ b/testing-report.yml
@@ -8,7 +8,7 @@
   status: pass
 
 - summary: |
-    Проверка входа пользователя с несуществующими логином и паролем
+    Проверка невозможности входа пользователя с несуществующими логином и паролем
   status: pass
 
 - summary: |
