--- a/test-cases.yml
+++ b/test-cases.yml
@@ -40,10 +40,11 @@
   requirement: |
      При неправильном логине или пароле пользователь должен получить сообщение об ошибке
   prerequisites: |
-    Открыта страница логина https://codebattle.hexlet.io/session/new?locale=en&next=%2F
+    Открыта главная страница игры https://codebattle.hexlet.io/ 
   test-data: |
     Логин = hexlet, Пароль = badpass
   steps:
+    - Переходим на страницу регистрации, нажав на кнопку "Sign in"
     - Вводим логин
     - Вводим пароль
     - Нажимаем на кнопку "Submit"
