--- a/requirements.yml
+++ b/requirements.yml
@@ -28,7 +28,7 @@ functional:
   - Пользователь должен иметь возможность создать новую задачу 26
   - Пользователь должен иметь возможность создать пакеты задач 27
   - Пользователь должен иметь возможность перейти на страницу с исходным кодом на Github 28
-  - Пользователь должен иметь возможность перейти на страницу Hexlet 29
+  - Пользователь должен иметь возможность перейти на страницу сайта Hexlet 29
   - Пользователь должен иметь возможность присоединиться к группе игры в Discord 30
   - Пользователь должен иметь возможность присоединиться к группе игры в Telegram 31
 non-functional:
