--- a/requirements.yml
+++ b/requirements.yml
@@ -5,39 +5,41 @@ functional:
   - Пользователь должен иметь возможность войти в свой аккаунт через Discord 3
   - Пользователь должен иметь возможность войти в свой аккаунт через Github 4
   - Пользователь должен иметь возможность сыграть простую битву без регистрации 5
-  - Пользователь должен иметь возможность сыграть с другом 6
-  - Пользователь должен иметь возможность сыграть с ботом 7
-  - Пользователь должен иметь возможность сыграть со случайным соперником 8 
-  - Пользователь должен иметь возможность выбора уровня сложности битвы 9
-  - Пользователь должен иметь возможность выбора продолжительности битвы 10
-  - Пользователь должен иметь возможность выбора задачи по имени 11
-  - Пользователь должен иметь возможность выбора задачи по тегам 12
-  - Пользователь должен иметь возможность присоединиться к предложенным битвам 13
-  - Пользователь должен иметь возможность сыграть турнир 14
-  - Пользователь должен иметь возможность создать свой турнир 15
-  - Пользователь должен иметь возможность просматривать историю всех сыгранных битв 16
-  - Пользователь должен иметь возможность отправлять сообщение в общий чат 17
-  - Пользователь должен иметь возможность отправлять личное сообщение другому пользователю онлайн 18
-  - Пользователь должен иметь возможность отправлять приглашение на битву другому пользователю онлайн 19
-  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков 20
-  - Пользователь должен иметь возможность просмотреть свою статистику 21
-  - Пользователь должен иметь возможность просмотреть подробную информацию по своим сыгранным играм 22
-  - Пользователь должен иметь возможность настраивать свой профиль 23
-  - Пользователь должен иметь возможность просмотреть рейтинг других пользователей 24
-  - Пользователь должен иметь возможность просмотреть подробную информацию о задачах 25
-  - Пользователь должен иметь возможность создать новую задачу 26
-  - Пользователь должен иметь возможность создать пакеты задач 27
-  - Пользователь должен иметь возможность перейти на страницу с исходным кодом на Github 28
-  - Пользователь должен иметь возможность перейти на страницу сайта Hexlet 29
-  - Пользователь должен иметь возможность присоединиться к группе игры в Discord 30
-  - Пользователь должен иметь возможность присоединиться к группе игры в Telegram 31
+  - Пользователь должен иметь возможность создать игру
+  - Пользователь должен иметь возможность отменить созданную игру
+  - Пользователь должен иметь возможность сыграть с другом 
+  - Пользователь должен иметь возможность сыграть с ботом 
+  - Пользователь должен иметь возможность сыграть со случайным соперником  
+  - Пользователь должен иметь возможность выбора уровня сложности битвы 
+  - Пользователь должен иметь возможность выбора продолжительности битвы 
+  - Пользователь должен иметь возможность выбора задачи по имени 
+  - Пользователь должен иметь возможность выбора задачи по тегам 
+  - Пользователь должен иметь возможность присоединиться к предложенным битвам 
+  - Пользователь должен иметь возможность сыграть турнир 
+  - Пользователь должен иметь возможность создать свой турнир 
+  - Пользователь должен иметь возможность просматривать историю всех сыгранных битв 
+  - Пользователь должен иметь возможность отправлять сообщение в общий чат 
+  - Пользователь должен иметь возможность отправлять личное сообщение другому пользователю онлайн 
+  - Пользователь должен иметь возможность отправлять приглашение на битву другому пользователю онлайн 
+  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков 
+  - Пользователь должен иметь возможность просмотреть свою статистику 
+  - Пользователь должен иметь возможность просмотреть подробную информацию по своим сыгранным играм 
+  - Пользователь должен иметь возможность настраивать свой профиль 
+  - Пользователь должен иметь возможность просмотреть рейтинг других пользователей 
+  - Пользователь должен иметь возможность просмотреть подробную информацию о задачах 
+  - Пользователь должен иметь возможность создать новую задачу 
+  - Пользователь должен иметь возможность создать пакеты задач 
+  - Пользователь должен иметь возможность перейти на страницу с исходным кодом на Github 
+  - Пользователь должен иметь возможность перейти на страницу сайта Hexlet 
+  - Пользователь должен иметь возможность присоединиться к группе игры в Discord 
+  - Пользователь должен иметь возможность присоединиться к группе игры в Telegram 
 non-functional:
-  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы 32  
-  - Сайт должен быть безопасным и защищать данные пользователя 33
-  - Сайт должен быть удобным на мобильном устройстве 34
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 35
-  - Сайт должен быть способен обрабатывать большое количество трафика 36
+  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы  
+  - Сайт должен быть безопасным и защищать данные пользователя 
+  - Сайт должен быть удобным на мобильном устройстве 
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 
+  - Сайт должен быть способен обрабатывать большое количество трафика 
 implicit:
-  - Сайт должен выдерживать нагрузку в 1000 пользователей 37
-  - Сайт должен иметь высокую скорость обновления в реальном времени 38
-  - Сайт должен иметь уведомления об изменениях во время игрового процесса 39
+  - Сайт должен выдерживать нагрузку в 1000 пользователей 
+  - Сайт должен иметь высокую скорость обновления в реальном времени 
+  - Сайт должен иметь уведомления об изменениях во время игрового процесса 
