--- a/requirements.yml
+++ b/requirements.yml
@@ -7,7 +7,7 @@ functional:
   - Пользователь должен иметь возможность сыграть простую битву без регистрации 5
   - Пользователь должен иметь возможность создать игру
   - Пользователь должен иметь возможность отменить созданную игру
-  - Пользователь должен иметь возможность сыграть с другом 
+  - Пользователь должен иметь возможность пользователя отправить приглашение на битву другу 
   - Пользователь должен иметь возможность сыграть с ботом 
   - Пользователь должен иметь возможность сыграть со случайным соперником  
   - Пользователь должен иметь возможность выбора уровня сложности битвы 
