--- a/testing-report.yml
+++ b/testing-report.yml
@@ -24,7 +24,15 @@
   status: pass
 
 - summary: |
-    Проверка возможности пользователя сыграть с другом 
+    Проверка возможности пользователя создать игру
+  status: pass
+
+- summary: |
+    Проверка возможности пользователя отменить созданную игру
+  status: pass
+
+- summary: |
+    Проверка возможности пользователя отправить приглашение другу
   status: pass
 
 - summary: |
