--- a/test-cases.yml
+++ b/test-cases.yml
@@ -67,7 +67,7 @@
     - Нажимаем на кнопку "Sign in"
     - Переходим в почту и подтверждаем учетную запись
   expected-result: |
-     Должна произойти регистрация нового пользователя (открывается лобби, в углу пользователь видит свой ник)
+    Должна произойти регистрация нового пользователя (открывается лобби, в углу пользователь видит свой ник)
 
 - summary: |
     Проверка регистрации пользователя через Discord
@@ -85,7 +85,7 @@
     - Нажимаем на кнопку "Вход"
     - Переходим в почту и подтверждаем учетную запись
   expected-result: |
-     Должна произойти регистрация нового пользователя (открывается лобби, в углу пользователь видит свой ник)
+    Должна произойти регистрация нового пользователя (открывается лобби, в углу пользователь видит свой ник)
 
 - summary: |
     Проверка возможности пользователя сыграть простую битву без регистрации
@@ -98,22 +98,56 @@
   steps:
     - Нажимаем на кнопку "Try simple battle" 
   expected-result: |
-     Должен произойти переход на страницу битвы
+    Должен произойти переход на страницу битвы
 
 - summary: |
-    Проверка возможности пользователя сыграть с другом 
+    Проверка возможности пользователя создать игру
   requirement: |
-    При нажатии на кнопку "Create invite" должен произойти переход на страницу битвы
+    При нажатии на кнопку "Create battle" битва должна появиться в общем списке битв
   prerequisites: |
     Залогиненным пользователем открыто лобби https://codebattle.hexlet.io/#lobby
   test-data: |
     empty
   steps:
     - Нажимаем на кнопку "Create a game"
-    - Выбираем тип игры "With a friend"
-    - Нажимаем на кнопку "Create invite"
+    - Выбираем параметры по умолчанию
+    - Нажимаем на кнопку "Create battle"
   expected-result: |
-     Должен произойти переход на страницу битвы
+    Созданная битва должна появиться в общем списке битв лобби
+
+- summary: |
+    Проверка возможности пользователя отменить созданную игру
+  requirement: |
+    При нажатии на кнопку "Cancel game" битва должна удалиться из общего списка
+  prerequisites: |
+    Залогиненным пользователем открыто лобби https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем параметры по умолчанию
+    - Нажимаем на кнопку "Create battle"
+    - Нажимаем на кнопку "Cancel game"
+  expected-result: |
+    Созданная битва должна удалиться из общего списка битв лобби
+
+- summary: |
+    Проверка возможности пользователя отправить приглашение на битву другу
+  requirement: |
+    При нажатии на кнопку "Create invite" другу должно отправиться приглашение на битву, которое он должен принять
+  prerequisites: |
+    Залогиненным пользователем открыто лобби https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем параметры по умолчанию
+    - Выбираем тип игры "With a friend"
+    - Выбираем никнейм друга из списка "Choose opponent"
+    - Нажимаем на кнопку "Create invite"
+    - Ждем, когда друг примет приглашение на битву
+  expected-result: |
+    Должен произойти переход на страницу битвы
 
 - summary: |
     Проверка возможности пользователя сыграть с ботом
@@ -125,6 +159,7 @@
      empty
   steps:
     - Нажимаем на кнопку "Create a game"
+    - Выбираем параметры по умолчанию
     - Выбираем тип игры "With a bot"
     - Нажимаем на кнопку "Create battle"
   expected-result: |
@@ -133,17 +168,18 @@
 - summary: |
     Проверка возможности пользователя сыграть со случайным соперником
   requirement: |
-    При нажатии на кнопку "Create battle" должен произойти переход на страницу битвы
+    Созданная битва должна отобразиться в общем списке битв, которую должен принять случайный соперник 
   prerequisites: |
     Залогиненным пользователем открыто лобби https://codebattle.hexlet.io/#lobby
   test-data: |
     empty
   steps:
     - Нажимаем на кнопку "Create a game"
+    - Выбираем параметры по умолчанию
     - Выбираем тип игры "With other user"
     - Нажимаем на кнопку "Create battle"
   expected-result: |
-     Должен произойти переход на страницу битвы
+    Битву, которую создал пользователь, должен принять случайный соперник
 
 - summary: |
     Проверка возможности пользователя выбрать уровень сложности битвы
