--- a/test-cases.yml
+++ b/test-cases.yml
@@ -182,6 +182,23 @@
     Битву, которую создал пользователь, должен принять случайный соперник
 
 - summary: |
+    Проверка корректного отображения параметра времени продолжительности битвы на странице битвы
+  requirement: |
+    Время продолжительности битвы должно отображаться корректно на странице битвы
+  prerequisites: |
+    Залогиненным пользователем открыто лобби https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем параметры по умолчанию
+    - Перемещаем ползунок "Time control" на 8 минут
+    - Нажимаем на кнопку "Create battle"
+    - Ждем, когда другой пользователь примет битву 
+  expected-result: |
+    Время продолжительности битвы на странице битвы должно составлять 8 минут 
+
+- summary: |
     Проверка возможности пользователя выбрать уровень сложности битвы
   requirement: |
     При нажатии на кнопку выбора уровня сложности должен отобразиться уровень "elementary", "easy", "medium" или "hard"
