--- a/requirements.yml
+++ b/requirements.yml
@@ -5,41 +5,41 @@ functional:
   - Пользователь должен иметь возможность войти в свой аккаунт через Discord 3
   - Пользователь должен иметь возможность войти в свой аккаунт через Github 4
   - Пользователь должен иметь возможность сыграть простую битву без регистрации 5
-  - Пользователь должен иметь возможность создать игру
-  - Пользователь должен иметь возможность отменить созданную игру
-  - Пользователь должен иметь возможность пользователя отправить приглашение на битву другу 
-  - Пользователь должен иметь возможность сыграть с ботом 
-  - Пользователь должен иметь возможность сыграть со случайным соперником  
-  - Пользователь должен иметь возможность выбора уровня сложности битвы 
-  - Пользователь должен иметь возможность выбора продолжительности битвы 
-  - Пользователь должен иметь возможность выбора задачи по имени 
-  - Пользователь должен иметь возможность выбора задачи по тегам 
-  - Пользователь должен иметь возможность присоединиться к предложенным битвам 
-  - Пользователь должен иметь возможность сыграть турнир 
-  - Пользователь должен иметь возможность создать свой турнир 
-  - Пользователь должен иметь возможность просматривать историю всех сыгранных битв 
-  - Пользователь должен иметь возможность отправлять сообщение в общий чат 
-  - Пользователь должен иметь возможность отправлять личное сообщение другому пользователю онлайн 
-  - Пользователь должен иметь возможность отправлять приглашение на битву другому пользователю онлайн 
-  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков 
-  - Пользователь должен иметь возможность просмотреть свою статистику 
-  - Пользователь должен иметь возможность просмотреть подробную информацию по своим сыгранным играм 
-  - Пользователь должен иметь возможность настраивать свой профиль 
-  - Пользователь должен иметь возможность просмотреть рейтинг других пользователей 
-  - Пользователь должен иметь возможность просмотреть подробную информацию о задачах 
-  - Пользователь должен иметь возможность создать новую задачу 
-  - Пользователь должен иметь возможность создать пакеты задач 
-  - Пользователь должен иметь возможность перейти на страницу с исходным кодом на Github 
-  - Пользователь должен иметь возможность перейти на страницу сайта Hexlet 
-  - Пользователь должен иметь возможность присоединиться к группе игры в Discord 
-  - Пользователь должен иметь возможность присоединиться к группе игры в Telegram 
+  - Пользователь должен иметь возможность создать игру 6
+  - Пользователь должен иметь возможность отменить созданную игру 7
+  - Пользователь должен иметь возможность пользователя отправить приглашение на битву другу 8
+  - Пользователь должен иметь возможность сыграть с ботом 9
+  - Пользователь должен иметь возможность сыграть со случайным соперником 10  
+  - Пользователь должен иметь возможность выбора уровня сложности битвы 11
+  - Пользователь должен иметь возможность выбора продолжительности битвы 12
+  - Пользователь должен иметь возможность выбора задачи по имени 13
+  - Пользователь должен иметь возможность выбора задачи по тегам 14
+  - Пользователь должен иметь возможность присоединиться к предложенным битвам 15
+  - Пользователь должен иметь возможность сыграть турнир 16
+  - Пользователь должен иметь возможность создать свой турнир 17
+  - Пользователь должен иметь возможность просматривать историю всех сыгранных битв 18
+  - Пользователь должен иметь возможность отправлять сообщение в общий чат 19
+  - Пользователь должен иметь возможность отправлять личное сообщение другому пользователю онлайн 20
+  - Пользователь должен иметь возможность отправлять приглашение на битву другому пользователю онлайн 21
+  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков 22
+  - Пользователь должен иметь возможность просмотреть свою статистику 23
+  - Пользователь должен иметь возможность просмотреть подробную информацию по своим сыгранным играм 24
+  - Пользователь должен иметь возможность настраивать свой профиль 25
+  - Пользователь должен иметь возможность просмотреть рейтинг других пользователей 26
+  - Пользователь должен иметь возможность просмотреть подробную информацию о задачах 27
+  - Пользователь должен иметь возможность создать новую задачу 28
+  - Пользователь должен иметь возможность создать пакеты задач 29
+  - Пользователь должен иметь возможность перейти на страницу с исходным кодом на Github 30
+  - Пользователь должен иметь возможность перейти на страницу сайта Hexlet 31
+  - Пользователь должен иметь возможность присоединиться к группе игры в Discord 32
+  - Пользователь должен иметь возможность присоединиться к группе игры в Telegram 33
 non-functional:
-  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы  
-  - Сайт должен быть безопасным и защищать данные пользователя 
-  - Сайт должен быть удобным на мобильном устройстве 
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 
-  - Сайт должен быть способен обрабатывать большое количество трафика 
+  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы 34 
+  - Сайт должен быть безопасным и защищать данные пользователя 35
+  - Сайт должен быть удобным на мобильном устройстве 36
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 37
+  - Сайт должен быть способен обрабатывать большое количество трафика 38
 implicit:
-  - Сайт должен выдерживать нагрузку в 1000 пользователей 
-  - Сайт должен иметь высокую скорость обновления в реальном времени 
-  - Сайт должен иметь уведомления об изменениях во время игрового процесса 
+  - Сайт должен выдерживать нагрузку в 1000 пользователей 39
+  - Сайт должен иметь высокую скорость обновления в реальном времени 40
+  - Сайт должен иметь уведомления об изменениях во время игрового процесса 41
