--- a/testing-report.yml
+++ b/testing-report.yml
@@ -44,6 +44,10 @@
   status: pass
 
 - summary: |
+    Проверка корректного отображения параметра времени продолжительности битвы на странице битвы
+  status: pass
+
+- summary: |
     Проверка возможности пользователя выбрать уровень сложности битвы
   status: pass
 
@@ -95,6 +99,22 @@
     Проверка возможности пользователя просматривать приглашения на битву от других игроков
   status: pass
 
+- summary: |
+    Проверка корректного завершения игры в случае победы 
+  status: pass
+
+- summary: |
+    Проверка корректного завершения игры в случае поражения
+  status: pass
+
+- summary: |
+    Проверка корректного завершения игры по таймеру
+  status: pass
+
+- summary: |
+    Проверка корректного завершения игры в случае, если пользователь сдается
+  status: pass
+  
 - summary: |
     Проверка возможности пользователя просмотреть свою статистику
   status: pass
